--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,8 @@
         <item name="colorOnSecondary">@color/white</item>
         <!--表面色-->
         <item name="colorOnSurface">@color/super_black40</item>
+        <!--文字颜色-->
+        <item name="android:textColor">@color/super_black40</item>
     </style>
     
     <style name="Theme.AndroidCourse" parent="Theme.AndroidCourse.Base"/>
@@ -50,6 +52,12 @@
     <style name="rounded_style">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+    </style>
+    <!--endregion-->
+
+    <!--region 自定义菜单项样式-->
+    <style name="CustomMenuItem">
+        <item name="android:textColor">@color/super_black40</item>
     </style>
     <!--endregion-->
 </resources>
