--- a/app/src/main/res/layout/activity_ticket_inquiry.xml
+++ b/app/src/main/res/layout/activity_ticket_inquiry.xml
@@ -1,10 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".components.TicketInquiryActivity">
+        tools:context=".components.TicketInquiryActivity"
+        android:background="@color/grey"
+        >
+    
+    <!--车票查询盒子-->
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="@dimen/s15"
+            android:background="@drawable/white_card_background"
+            android:orientation="vertical"
+            android:paddingHorizontal="15dp"
+            >
+        <!--车票信息显示-->
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+            <EditText
+                    android:id="@+id/starting_station"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="杭州东"
+                    android:layout_weight="1"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    />
+            
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    />
+            
+            <EditText
+                    android:id="@+id/terminal"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="临海"
+                    android:layout_weight="1"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:gravity="right" />
+        </LinearLayout>
+        <!--车票时间展示-->
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                >
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10月12日"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="今天"
+                    />
+            <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="学生票"
+                    />
+        </LinearLayout>
+        <!--查询车票按钮-->
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/ticket_inquiry"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="查询车票"
+                app:cornerRadius="5dp"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                />
+        <!--历史记录盒子-->
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ticket_inquiry_record"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_weight="1"
+                    />
+            <TextView
+                    android:id="@+id/clear_history"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="清除历史"
+                    android:layout_gravity="right"
+                    />
+        </LinearLayout>
+        
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
