--- a/app/src/main/res/layout/activity_ticket_inquiry.xml
+++ b/app/src/main/res/layout/activity_ticket_inquiry.xml
@@ -87,17 +87,19 @@
                 app:cornerRadius="5dp"
                 android:textSize="20dp"
                 android:textStyle="bold"
+                android:layout_marginBottom="10dp"
                 />
         <!--历史记录盒子-->
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/ticket_inquiry_record"
+                    android:id="@+id/ticket_info_list"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:layout_marginEnd="5dp"
                     />
             <TextView
                     android:id="@+id/clear_history"
